# eflips-opt

./: -pre-commit-config.yaml  .gitignore  .pre-commit-config.yaml  README.md  assignment.csv  capacities.csv  capacities_total.csv  cost.csv  depot_df.csv  example.py  example_6_to_8.py  example_gamspy.py  example_pyomo.py  new_assign_with_capacity.csv  orig_assign.csv  playground.py  pyproject.toml  results.csv  rotation_df.csv  vehicle_type.csv
.github/workflows/: black-and-mypy.yml  lint.yml  poetry-check.yml  pylint.yml  pypi-version-check.yml  release.yml  unittests.yml
docs/: conf.py
eflips/opt/: __init__.py  base.py  data_preperation.py  depot_rotation_matching.py  depot_rotation_optimizer.py  simplified_electric_vehicle_scheduling.py  smart_charging.py  solve.py  util.py
eflips/opt/scheduling/: __init__.py  util.py
eflips/opt/transition_planning/: berlin_literature.py  transition_planning.py  util.py
examples/depot_rotation_matching/: 04b_complete_depot_assignment.py  example.py  example_6_to_8.py  example_demo.py
examples/simplified_electric_vehicle_scheduling_problem/: existing_scenario.py
examples/transition_planning/: example_transition_plan.py  playground_block_vehicle.py
tests/: test_depot_rotation_matching.py  test_depot_rotation_optimizer.py  test_scheduling.py
tests/data/: clear_database.sql
