[tool.poetry]
name = "eflips-opt"
version = "0.1.0"
description = ""
authors = ["shuyao <shuyao.guo@tu-berlin.de>"]
packages = [{include="eflips/opt"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eflips-model = "^3.0.0"
sqlalchemy = "^2.0.28"
pandas = "^2.1"
geoalchemy2 = "^0.14.6"
shapely = "^2.0.3"
openrouteservice = "^2.3.3"
gurobipy = "^11.0.1"
pyomo = "^6.7.1"
numpy = "^1.26.4"
plotly = "^5.22.0"
pytest = "^8.2.1"
black = "^24.4.2"
pylint = "^3.2.2"
pre-commit = "^3.7.1"
mypy = "^1.7.1"
sphinx-autoapi = "^3.1.1"
sphinx-paramlinks = "^0.6.0"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
